added link to repo

--- a/saes/index.html
+++ b/saes/index.html
@@ -1293,8 +1293,8 @@ from this work:
       href="https://www.metmuseum.org/art/collection/search/435775">Metropolitan
       Museum of Art’s open access collection</a>.</p>
       <h3 id="code">Code</h3>
-      <p>The code will be available <a
-      href="https://github.com/owenparsons">on my GitHub</a>. Please let me
+      <p>The code is available <a
+      href="https://github.com/owenparsons/sae_network_analysis">on my GitHub</a>. Please let me
       know if you find any issues or have any questions about it.</p>
 
 
