Added updates to project sprint slides

--- a/presentations/project-sprints/index.html
+++ b/presentations/project-sprints/index.html
@@ -210,7 +210,8 @@
         <div class="slide active">
             <!-- <div class="prompt">whoami && pwd</div> -->
             <h1>Project sprints</h1>
-            <p>What we did and what we learned</p>
+            <p><b>What we did and what we learned</b></p>
+            <p></p>
             <!-- <div class="code-block">
 <span class="command">$ uptime</span>
 <span class="output"> 15:42:30 up 127 days,  3:21,  1 user,  load average: 0.15, 0.09, 0.05</span>
@@ -232,37 +233,84 @@
             </ul>
         </div>
 
-        <!-- Slide 8: Conclusion -->
         <div class="slide">
-            <div class="prompt">exit 0</div>
-            <h2>Summary</h2>
-            <div class="ascii-art">
- _   _ _   _ _____  __
-| | | | \ | |_ _\ \/ /
-| | | |  \| || | \  / 
-| |_| | |\  || | /  \ 
- \___/|_| \_|___/_/\_\
-                      
-</div>
+            <h2>What was good?</h2>
             <ul>
-                <li>Keep it simple</li>
-                <li>Compose small tools</li>
-                <li>Measure and monitor</li>
-                <li>Automate everything</li>
-                <li>Fail fast, recover faster</li>
+                <li>Gave people a chance to suggest ideas and work on things that excite them</li>
+                <li>No pressure from customers</li>
+                <li>Utilised downtime</li>
+                <li>Explored R&D directions that led to projects</li>
             </ul>
-            <div class="code-block">
-<span class="command">$ echo "Thanks for your attention" | cowsay</span>
-<span class="output"> _________________________
-&lt; Thanks for your attention &gt;
- -------------------------
-        \   ^__^
-         \  (oo)\_______
-            (__)\       )\/\
-                ||----w |
-                ||     ||</span>
-            </div>
         </div>
+
+        <div class="slide">
+            <h2>What could have been improved?</h2>
+            <ul>
+                <li>Process to clearly prioritise project ideas</li>
+                <li>Input from commerical and more strategically involved people on project directions</li>
+                <li>Impact tracking (longer-term timeframes)</li>
+                <li>Clear framework for managing non-paid work</li>
+            </ul>
+        </div>
+
+        <div class="slide">
+            <h2>Improving the process</h2>
+            <ul>
+                <li>Choosing areas of focus</li>
+                <li>Calibrating effort</li>
+                <li>Tracking impact</li>
+            </ul>
+        </div>
+
+        <div class="slide">
+            <h2>Choosing areas of focus</h2>
+            <ul>
+                <li>Need to scope and priortise projects so they align with company focus</li>
+                <ul>
+                <li>Upskilling people in areas we want to focus on</li>
+                <li>Creating demos and prototypes</li>
+                <li>Assessing feasibility of long term projects</li>
+                </ul>
+                <li>Guiding focus should come from wider team</li>
+                <ul>
+                    <li>Collaborative approaches to idea submission seems to work but priortitisation needs more centralised input</li>
+                <li>Commercial team can track requests from prospective customers to give signal on areas of focus</li>
+                <li>Strategic teams should be involved in prioritisation</li>
+                </ul>
+            </ul>
+        </div>
+
+        <div class="slide">
+            <h2>Calibrating effort</h2>
+            <ul>
+                <li>How much time/effort should be spent on non-paid work?</li>
+                <li>Is there a minimum threshold below which non-paid work doesn't return benefits.</li>
+                <li>At what point does non-paid work become a distraction from paid work?</li>
+            </ul>
+        </div>
+
+        <div class="slide">
+            <h2>Tracking impact</h2>
+            <ul>
+                <li>Fundamentally, we are a business and we need to make money.</li>
+                <li>Important to find ways to measure impact of non-paid work.</li>
+                <li>This can help us to calibrate in two main ways:</li>
+                <ul>
+                    <li>What should we be focusing on?</li>
+                    <li>How much resource should we be allocating to non-paid work?</li>
+            </ul>
+        </div>
+
+        <div class="slide">
+            <h2>TL;DR</h2>
+            <ul>
+                <li>Choosing what to focus on in should be driven by key members across the company.</li>
+                <li>The could be a lot of benefits from having clear processes for prioritisation of unpair work.</li>
+                <li>Quantifying the impact of non-paid work will be challenging but is important to help us calibrate and make better decisions.</li>
+            </ul>
+        </div>
+
+        
     </div>
 
     <div class="status-bar">
