Add font change and ascii

--- a/presentations/project-sprints/index.html
+++ b/presentations/project-sprints/index.html
@@ -95,7 +95,7 @@
 
         p {
             color: #c9d1d9;
-            font-size: 1.1rem;
+            font-size: 1.4rem;
             margin-bottom: 16px;
         }
 
@@ -211,7 +211,26 @@
             <!-- <div class="prompt">whoami && pwd</div> -->
             <h1>Project sprints</h1>
             <p><b>What we did and what we learned</b></p>
-            <p></p>
+            <div class="ascii-art">
+
+                     ,////,
+                     /// 6|
+                     //  _|
+                    _/_,-'
+                _.-/'/   \   ,/;,
+            ,-' /'  \_   \ / _/
+            `\ /     _/\  ` /
+             |     /,  `\_/
+             |     \'
+  /\_        /`      /\
+/' /_``--.__/\  `,. /  \
+|_/`  `-._     `\/  `\   `.
+          `-.__/'     `\   |
+                       `\  \
+                        `\ \
+                          \_\__
+                           \___)
+               </div>
             <!-- <div class="code-block">
 <span class="command">$ uptime</span>
 <span class="output"> 15:42:30 up 127 days,  3:21,  1 user,  load average: 0.15, 0.09, 0.05</span>
