--- a/presentations/project-sprints/index.html
+++ b/presentations/project-sprints/index.html
@@ -267,33 +267,37 @@
                 <li>Input from commerical and more strategically involved people on project directions</li>
                 <li>Impact tracking (longer-term timeframes)</li>
                 <li>Clear framework for managing non-paid work</li>
+                <li>Not clear how to handle projects that don't immediately convert to further work</li>
             </ul>
         </div>
 
         <div class="slide">
             <h2>Improving the process</h2>
-            <ul>
+            How can we improve this process? There are three main areas that affect the impact of a 'project sprint' initiative:
+            <ol>
                 <li>Choosing areas of focus</li>
                 <li>Calibrating effort</li>
                 <li>Tracking impact</li>
-            </ul>
+            </ol>
         </div>
 
         <div class="slide">
             <h2>Choosing areas of focus</h2>
             <ul>
-                <li>Need to scope and priortise projects so they align with company focus</li>
-                <ul>
-                <li>Upskilling people in areas we want to focus on</li>
-                <li>Creating demos and prototypes</li>
-                <li>Assessing feasibility of long term projects</li>
-                </ul>
-                <li>Guiding focus should come from wider team</li>
-                <ul>
-                    <li>Collaborative approaches to idea submission seems to work but priortitisation needs more centralised input</li>
-                <li>Commercial team can track requests from prospective customers to give signal on areas of focus</li>
-                <li>Strategic teams should be involved in prioritisation</li>
-                </ul>
+                <li>Need to scope and priortise projects so they align with company focus
+                    <ul>
+                        <li>Upskilling people in areas we want to focus on</li>
+                        <li>Creating demos and prototypes</li>
+                        <li>Assessing feasibility of long term projects</li>
+                    </ul>
+                </li>
+                <li>Guiding focus should come from wider team
+                    <ul>
+                        <li>Collaborative approaches to idea submission seems to work but priortitisation needs more centralised input</li>
+                        <li>Commercial team can track requests from prospective customers to give signal on areas of focus</li>
+                        <li>Strategic teams should be involved in prioritisation</li>
+                    </ul>
+                </li>
             </ul>
         </div>
 
@@ -311,10 +315,12 @@
             <ul>
                 <li>Fundamentally, we are a business and we need to make money.</li>
                 <li>Important to find ways to measure impact of non-paid work.</li>
-                <li>This can help us to calibrate in two main ways:</li>
+                <li>This can help us to calibrate in two main ways:
                 <ul>
                     <li>What should we be focusing on?</li>
                     <li>How much resource should we be allocating to non-paid work?</li>
+                </ul>
+                </li>
             </ul>
         </div>
 
