--- a/presentations/project-sprints/index.html
+++ b/presentations/project-sprints/index.html
@@ -135,7 +135,7 @@
             padding-left: 20px;
         }
 
-        li::before {
+        ul li::before {
             content: "•";
             color: #58a6ff;
             position: absolute;
